--- a/main.html
+++ b/main.html
@@ -4,10 +4,10 @@
 
 <head>
 </head>
-
+<main>
 <body>
 	<!-- PLease only edit this file for this asssignment. Thanks!-->
 	<h1>Hello World </h1>
 </body>
-
+</main>
 </html>
